Add UI and function

--- a/tortoise/pom.xml
+++ b/tortoise/pom.xml
@@ -19,7 +19,14 @@
             <artifactId>amqp-client</artifactId>
             <version>5.8.0</version>
         </dependency>
- 
+
+        <!-- https://mvnrepository.com/artifact/jfree/jfreechart -->
+        <dependency>
+            <groupId>jfree</groupId>
+            <artifactId>jfreechart</artifactId>
+            <version>1.0.13</version>
+        </dependency>
+
     </dependencies>
  
     <build>
